# research-analysis-suite

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  scaffolding_generator.py
research_methods/interviews/: descriptive.py  exploratory.py  ingestion.py  translation.py
research_methods/surveys/: cleaning.py  descriptive.py  ingestion.py  statistical.py
research_methods/transcription/: base.py  whisper.py
scripts/: run_interviews_pipeline.py  run_surveys_pipeline.py  transcribe.py
tests/: test_interviews.py  test_surveys.py
utils/: audio_splitter.py  audio_utils.py  config.py  file_manager.py  io.py  llm_tools.py  translation.py
